1999-01-24  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc (glclock): Use "Exit" for the menu label instead of
	"Quit".  Fill values in menu items.

	* module.cc: Remove #define _GNU_SOURCE.

	* simple.h: New file.
	* simple.c: New file.
	
	* configure.in: Add the config header.

	* acconfig.h: New file.
	* config.h.in: Generated by autoheader.

	* gdkgl.c [HAVE_CONFIG_H]: Include "config.h".

	* NEWS: Updated.

1999-01-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* AUTHORS: Updated.

	* main.cc: Do not define _GNU_SOURCE.
	(main): Choose an appropriate visual.

	* glclock.h: Include "gdkgl.h".  Reorder #include's.

	* glclock.cc: Do not define _GNU_SOURCE.
	Include "gdkgl.h".  Reorder #include's.
	(update): Use "gdkgl.h" function.
	(handle_configure_event): Likewise.

	* configure.in: Remove gdkGL/Makefile from output.

	* Makefile.am (rglclock_SOURCES): Add gdkgl.c.
	(rglclock_LDADD): Remove gdkGL/libgdkGL.a.
	(noinst_HEADERS): Add gdkgl.h.
	(SUBDIRS): Removed.

	* main.cc (parse_options): New function.
	(main): Add option parsing.

	* glclock.h: Include <gtk/gtkmenufactory.h>.

	* configure.in: Change the version number system.
	Remove unneeded blank lines.
	Define _GNU_SOURCE.
	Add checks for <getopt.h> and getopt_long.

1998-09-21  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Update.

	* glclock.h (class glclock): Add members: describe, struct
	menu_listener, menu_quit, menu_factory, about.

	* glclock.cc (menu_activate): New function.
	(describe): New function.
	(~glclock): Destroy the member menu factory.
	(glclock): Create and initialize a menu factory.
	(handle_button_event): Handle button-3 for pop-up menu.
	(menu_quit): New function.

1998-08-19  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* module.cc (draw_clock) [LOGO128]: Add experimental texture code.
	(init) [LOGO]: Likewise.

	* module.h (class module): Add member rot.
	* module.cc (rot): Removed.
	(init): Initialize this->rot.