@@ -1,3 +1,11 @@
+1999-01-25  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* module.cc (draw_clock): Move the core code to simple.c.
+	(init): Likewise.
+
+	* simple.c (simple_draw_clock, simple_init): New functions.
+	* simple.h: Updated with the prototype decl.
+
 1999-01-24  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* glclock.cc (glclock): Use "Exit" for the menu label instead of
